# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1196 2013/02/08 11:46:37 ago Exp $

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.50.ebuild:
  Stable for sh, wrt bug #455930

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.50.ebuild:
  Stable for alpha, wrt bug #455930

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.50.ebuild:
  Stable for s390, wrt bug #455930

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.50.ebuild:
  Stable for sparc, wrt bug #455930

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.50.ebuild:
  Stable for arm, wrt bug #455930

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.50.ebuild:
  Stable for ppc64, wrt bug #455930

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.50.ebuild:
  Stable for ppc, wrt bug #455930

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.50.ebuild:
  Stable for x86, wrt bug #455930

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.50.ebuild:
  Stable for amd64, wrt bug #455930

  07 Feb 2013; Jeroen Roovers <jer@gentoo.org> portage-2.1.11.50.ebuild:
  Stable for HPPA (bug #455930).

  06 Feb 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.11.31.ebuild,
  portage-2.1.11.50.ebuild, portage-2.2.0_alpha142.ebuild,
  portage-2.2.0_alpha161.ebuild, portage-9999.ebuild:
  DEPEND on make-3.82 for bug #282760.

  27 Jan 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.11.31.ebuild,
  portage-2.1.11.50.ebuild, portage-2.2.0_alpha142.ebuild,
  portage-2.2.0_alpha161.ebuild, portage-9999.ebuild:
  Remove obsolete warning about RMD160 hash support.

*portage-2.2.0_alpha161 (24 Jan 2013)

  24 Jan 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha161.ebuild,
  -portage-2.2.0_alpha159.ebuild, -portage-2.2.0_alpha160.ebuild: