@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1196 2013/02/08 11:46:37 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1197 2013/02/09 17:49:26 zmedico Exp $
+
+  09 Feb 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.11.50.ebuild,
+  portage-2.2.0_alpha161.ebuild:
+  Require >=python-2.6.5 for bug #456236.
 
   08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.50.ebuild:
   Stable for sh, wrt bug #455930
